# RustPQ

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  docs.yml
benches/: dsa.rs  kem.rs  kem_hybrid.rs
examples/: aes_encrypt.rs  basic.rs  e2ee.rs  hybrid.rs  mldsa.rs
ml-kem/: Cargo.toml
ml-kem/benches/: kem.rs
ml-kem/examples/: aes_encrypt.rs  basic.rs
ml-kem/src/: compress.rs  encode.rs  error.rs  indcpa.rs  kem.rs  lib.rs  ntt.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  sampling.rs
src/: lib.rs
src/ml_dsa/: error.rs  mod.rs  ntt.rs  packing.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  rounding.rs  sampling.rs  sign.rs  symmetric.rs
src/ml_kem/: compress.rs  encode.rs  indcpa.rs  kem.rs  mod.rs  ntt.rs  poly.rs  polyvec.rs  reduce.rs  sampling.rs  symmetric.rs
src/ml_kem_hybrid/: error.rs  mod.rs  p256_mlkem768.rs  p384_mlkem1024.rs  x25519_mlkem768.rs
tools/: generate_zetas.py
